maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:70: error: value !=- is not a member of Int
       if(_C_(j)!=-1){
                ^